# gff-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
gff/: Cargo.toml
gff-derive/: Cargo.toml
gff-derive/src/: lib.rs
gff-derive/tests/: test_01.rs
gff/src/: common.rs  deserialize.rs  fmt.rs  lib.rs  packer.rs  parser.rs  serialize.rs
gff/test-data/: test.bic
