[package]
name = "gff-derive"
version = "0.1.0"
authors = ["Hugo Camboulive <hugo@camboulive.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.74"
quote = "1.0.9"
gff = { path = "../gff" }

[lib]
proc-macro = true
